--- a/Example/Project27.dproj
+++ b/Example/Project27.dproj
@@ -401,6 +401,7 @@
             <FormType>fmx</FormType>
         </DCCReference>
         <DCCReference Include="..\HGM.IpInfo.pas"/>
+        <None Include="..\README.md"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -441,6 +442,12 @@
                 <DeployFile LocalName="Win32\Debug\Project27.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Project27.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\README.md" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
